# heimdall

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: daemonset.yaml
docs/: README.md  architecture.md  config.md  observability.md  runbook.md
ebpf-socks/: Cargo.toml
ebpf-socks-common/: Cargo.toml
ebpf-socks-common/src/: lib.rs
ebpf-socks-ebpf/: Cargo.toml
ebpf-socks-ebpf/.cargo/: config.toml
ebpf-socks-ebpf/src/: main.rs
ebpf-socks/src/: main.rs
heimdall/: Cargo.toml  build.rs
heimdall-common/: Cargo.toml
heimdall-common/src/: lib.rs
heimdall-config/: Cargo.toml
heimdall-config/src/: lib.rs
heimdall-ebpf/: Cargo.toml  rust-toolchain.toml
heimdall-ebpf/src/: main.rs
heimdall-ui/: .oxlintrc.json  Cargo.toml  Dioxus.toml  index.html  package.json  tsconfig.json  vite.config.ts
heimdall-ui/assets/: daisyui-themes.min.css
heimdall-ui/src/: App.tsx  i18n.ts  main.rs  main.tsx  theme.ts  types.ts
heimdall-ui/src/api/: client.ts  ws.ts
heimdall-ui/src/components/: ActiveFilterChips.tsx  AdvancedFiltersPopover.tsx  AppShell.tsx  FilterBar.tsx  FlowDetail.tsx  FlowTable.tsx  LiveTapView.tsx  MessageBlock.tsx  SettingsDrawer.tsx  WsStatusBadge.tsx
heimdall-ui/src/hooks/: useKeyboardShortcuts.ts  useLiveFlows.ts  useLiveTap.ts  useStatus.ts  useThemeMode.ts
heimdall-ui/src/keybindings/: HelpOverlay.tsx  HintMode.tsx  KbHandlersBridge.tsx  KeybindingsProvider.tsx  StatusChip.tsx  WhichKeyPopup.tsx  registry.ts
heimdall-ui/src/util/: clipboard.ts  filterFlow.ts
heimdall/src/: api.rs  bootstrap.rs  bypass.rs  dns.rs  gc.rs  gosym.rs  main.rs  outbound.rs  pod.rs  policy.rs  router.rs  sni.rs  store.rs  tap.rs
heimdall/src/cli/: config.rs  flows.rs  init.rs  mod.rs  run.rs  status.rs
heimdall/src/cli/init_templates/: README.md  default.json  default.ncl  default.toml  default.yaml  heimdall.json  heimdall.ncl  heimdall.toml  heimdall.yaml  lib.ncl
kube-tproxy/: Cargo.toml
kube-tproxy-common/: Cargo.toml
kube-tproxy-common/src/: lib.rs
kube-tproxy-ebpf/: Cargo.toml
kube-tproxy-ebpf/.cargo/: config.toml
kube-tproxy-ebpf/src/: main.rs
kube-tproxy/src/: main.rs
skills/heimdall/: SKILL.md
skills/heimdall-config/: SKILL.md
skills/heimdall-flows/: SKILL.md
skills/heimdall-init/: SKILL.md
skills/heimdall-run/: SKILL.md
skills/heimdall-serve/: SKILL.md
skills/heimdall-status/: SKILL.md
skills/heimdall/references/: config.md  flows.md  init.md  run.md  serve.md  status.md
tests/tap/: README.md
tests/tap/timoni/: timoni.cue  values.cue
tests/tap/timoni/cue.mod/: module.cue
tests/tap/timoni/templates/: config.cue  resources.cue
tests/tap/timoni/templates/scripts/: boringssl-bun.js  rustls-deno.ts
