[package]
name = "ebpf-socks-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { version = "0.1", features = ["macros"] }
aya-log-ebpf = "0.1"
ebpf-socks-common = { path = "../ebpf-socks-common", default-features = false }

[[bin]]
name = "ebpf-socks-ebpf"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
