[package]
name = "heimdall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
heimdall-common = { path = "../heimdall-common", default-features = false }

[[bin]]
name = "heimdall-ebpf"
path = "src/main.rs"

[workspace]

[profile.release]
opt-level = 2
lto = false
