[package]
name = "heimdall-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pin to match the dioxus-cli (`dx`) version available in the dev shell.
dioxus = { version = "=0.7.3", features = ["web", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-utils = "0.2"
gloo-timers = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "wasmbind"] }
web-sys = { version = "0.3", features = ["Window", "Location"] }

[[bin]]
name = "heimdall-ui"
path = "src/main.rs"

# Standalone — not a member of the heimdall workspace because its target
# is wasm32-unknown-unknown and it has its own dx build pipeline.
[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
