[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

[dependencies]
# eBPF userspace management: load programs, attach to cgroups, read/write maps
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

# Shared data types with the eBPF programs
heimdall-common = { path = "../heimdall-common" }

# Config schema (YAML at /etc/heimdall/config.yaml)
heimdall-config = { path = "../heimdall-config" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Low-level socket options
libc = "0.2"

[[bin]]
name = "heimdall"
path = "src/main.rs"
