[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

[dependencies]
# eBPF userspace management: load programs, attach to cgroups, read/write maps
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

# Shared data types with the eBPF programs
heimdall-common = { path = "../heimdall-common" }

# Config schema (YAML at /etc/heimdall/config.yaml)
heimdall-config = { path = "../heimdall-config" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Low-level socket options
libc = "0.2"

# Kubernetes API client + informer (pod label/annotation cache).
kube = { version = "0.96", default-features = false, features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
futures = "0.3"

# Cache types for resolver maps
parking_lot = "0.12"

# DNS message parsing/serialization for heimdall's fake-IP DNS server.
hickory-proto = { version = "0.24", default-features = false }

# Flow store: sqlite for metadata, 3-day retention.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }

# Time helpers
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Pretty CLI table output
comfy-table = "7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# HTTP API + future Web UI
axum = { version = "0.8", features = ["ws", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Bundle the Dioxus UI build output into the daemon binary.
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
