[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

[dependencies]
# eBPF userspace management: load programs, attach to cgroups, read/write maps
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

# Shared data types with the eBPF programs
heimdall-common = { path = "../heimdall-common" }

# Config schema (YAML at /etc/heimdall/config.yaml)
heimdall-config = { path = "../heimdall-config" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Low-level socket options
libc = "0.2"

# Talk to systemd: READY=1 after init, WATCHDOG=1 heartbeats. Lets
# downstream units (e.g. cilium-agent) wait for actual readiness, and
# lets systemd kill+restart heimdall if the heartbeat stops. No-op
# when not run under systemd — the crate degrades to functions that
# return Ok(()).
sd-notify = "0.4"

# `heimdall run` cgroup management — fork/exec/waitpid + signal masking.
# `process` for fork/wait, `signal` for SIGINT propagation to the child.
nix = { version = "0.29", features = ["process", "signal", "fs", "mount", "sched"] }

# Sync HTTP client for `heimdall run` → daemon /api/cli/register.
# Sync (not reqwest) because the run subcommand is itself sync — it
# fork/exec's the wrapped command and doesn't drive a tokio runtime.
# Tiny footprint, no rustls / native-tls needed for loopback.
ureq = { version = "2", default-features = false, features = ["json"] }

# Kubernetes API client + informer (pod label/annotation cache).
kube = { version = "0.96", default-features = false, features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
futures = "0.3"

# Cache types for resolver maps
parking_lot = "0.12"

# DNS message parsing/serialization for heimdall's fake-IP DNS server.
hickory-proto = { version = "0.24", default-features = false }

# Flow store: sqlite for metadata, 3-day retention.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }

# Time helpers
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Pretty CLI table output
comfy-table = "7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# HTTP API + future Web UI
axum = { version = "0.8", features = ["ws", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Bundle the Dioxus UI build output into the daemon binary.
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"

# Phase B tap: aya's perf event API hands us BytesMut buffers.
bytes = "1"

# Phase B Go uprobe: parse pod ELFs to detect Go binaries (.gopclntab)
# and find crypto/tls.(*Conn).Write symbol offsets. aya already pulls
# `object` in transitively, but we use it directly for the pre-attach
# scan so we can filter non-Go binaries before paying the symbol
# resolution cost.
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }

# Pure-Rust x86-64 disassembler. Phase B uses it to walk the body of
# crypto/tls.(*Conn).Read and find every RET instruction, since Go's
# movable stacks make uretprobes unsafe — we attach a regular uprobe
# at each return site instead (Pixie/Coroot pattern).
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "instr_info"] }

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
serde_yaml = "0.9"
