[package]
name = "kube-tproxy-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { version = "0.1", features = ["macros"] }
aya-log-ebpf = "0.1"
kube-tproxy-common = { path = "../kube-tproxy-common", default-features = false }

[[bin]]
name = "kube-tproxy-ebpf"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
